<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="qrsplitter">/</string>

    <string name="app_name">µ-Remote</string>
    <string name="hello_world">Hello world!</string>
    <string name="change_layout">Change Layout</string>
    <string name="init">init</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>

    <string name="fillString">Output</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>

    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num10">10</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Button Labels</string>

    <string name="btnpref_summary"></string>
    <string name="btnpref_title1">Button 1</string>
    <string name="btnpref_title2">Button 2</string>
    <string name="btnpref_title3">Button 3</string>
    <string name="btnpref_title4">Button 4</string>
    <string name="btnpref_title5">Button 5</string>
    <string name="btnpref_title6">Button 6</string>
    <string name="btnpref_title7">Button 7</string>
    <string name="btnpref_title8">Button 8</string>
    <string name="btnpref_title9">Button 9</string>
    <string name="btnpref_title10">Button 10</string>

    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connecting">..Connecting</string>

    <string name="noConnDialogTitle">No Connection</string>
    <string name="noConnDialogText">Your PC has no connection to the internet. Please press the "reload" button</string>
    <string name="noScanDialogTitle">No Barcode Scanner</string>
    <string name="noScanDialogText">You have to download a barcode scanner in order to be able to use this application correctly</string>



</resources>
